  MultibyteStreamReader, or MultibyteStreamWriter.


Tests
-----

- Fixed failure in test_macfs on Mac OS X 10.4 (Tiger), which
  apparently doesn't allow the creation time to be set later than the
  modification time.  Fixed by changing the test data.


Build
-----


What's New in Python 2.4.2c1
============================

*Release date: 21-SEP-2005*

Core and builtins
-----------------

- On 64-bit platforms, when __len__() returns a value that cannot be
  represented as a C int, raise OverflowError.

- SF bug #893549: parsing keyword arguments was broken with a few format
  codes.

- Changes donated by Elemental Security to make it work on AIX 5.3
  with IBM's 64-bit compiler (SF patch #1284289).  This also closes SF
  bug #105470: test_pwd fails on 64bit system (Opteron).

- Changes donated by Elemental Security to make it work on HP-UX 11 on
  Itanium2 with HP's 64-bit compiler (SF patch #1225212).

- Disallow keyword arguments for type constructors that don't use them
  (fixes bug #1119418).

- Forward UnicodeDecodeError into SyntaxError for source encoding errors.

- SF bug #900092: When tracing (e.g. for hotshot), restore 'return' events for
  exceptions that cause a function to exit.

- SF bug #1257731:  set.discard() and set.remove() did not correctly
  handle keys that both inherited from set and defined their own
  __hash__() function.  Also, changed set.__contains__() to have
  identical logic.

- The set() builtin can now properly compute s-=s as an empty set.

- SF bug #1238681:  freed pointer is used in longobject.c:long_pow().

- SF bug #1185883:  Python's small-object memory allocator took over
  a block managed by the platform C library whenever a realloc specified
  a small new size.  However, there's no portable way to know then how
  much of the address space following the pointer is valid, so no
  portable way to copy data from the C-managed block into Python's
  small-object space without risking a memory fault.  Python's small-object