@@ -40,6 +40,12 @@ What's New in Python 2.4.2c1
 Core and builtins
 -----------------
 
+- SF bug #1163563: the original fix for bug #1010677 ("thread Module
+  Breaks PyGILState_Ensure()") broke badly in the case of multiple
+  interpreter states; back out that fix and do a better job (see
+  http://mail.python.org/pipermail/python-dev/2005-June/054258.html
+  for a longer write-up of the problem).
+
 - On 64-bit platforms, when __len__() returns a value that cannot be
   represented as a C int, raise OverflowError.
 
